fix overflow on card bug and null issue

--- a/src/styles/blocks/summary-head.less
+++ b/src/styles/blocks/summary-head.less
@@ -63,6 +63,8 @@
             margin-top: 4px;
             min-width: 94px;
             vertical-align: middle;
+            white-space: normal;
+            width: 50%;
           }
 
           &.summary-head__title-item_type_alignment {
